--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,15 @@
 	<properties>
 		<author>wikmor</author>
 		<main.class>me.wikmor.lpc.LPC</main.class>
-		<java.version>1.8</java.version>
+		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
 	<repositories>
 		<repository>
-        	<id>spigot-repo</id>
-        	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-    	</repository>
+			<id>papermc</id>
+			<url>https://repo.papermc.io/repository/maven-public/</url>
+		</repository>
         <repository>
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
@@ -36,9 +36,9 @@
 	
 	<dependencies>
     	<dependency>
-           	<groupId>org.spigotmc</groupId>
-           	<artifactId>spigot-api</artifactId>
-           	<version>1.21.5-R0.1-SNAPSHOT</version>
+           	<groupId>dev.folia</groupId>
+           	<artifactId>folia-api</artifactId>
+           	<version>1.21.4-R0.1-SNAPSHOT</version>
         	<scope>provided</scope>
     	</dependency>
         <dependency>
@@ -62,21 +62,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				
-				<!-- Change version to the latest one from
-					 https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
 				<version>3.2.2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				
-				<!-- Change version to the latest one from
-					 https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 				<version>3.10.1</version>
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
+					<source>21</source>
+					<target>21</target>
 				</configuration>
 			</plugin>
 			<plugin>
