--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,8 @@ description: ${project.description}
 version: ${project.version}
 main: ${main.class}
 author: ${author}
-api-version: 1.13
+api-version: 1.21
+folia-supported: true
 depend: [LuckPerms]
 softdepend: [PlaceholderAPI]
 commands:
